исправление: подготовить безопасную публичную версию